--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ربات صراط - قدرت در دستان ماست!</title>
+    <title>بازوی صراط - قدرت در دستان ماست!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>🤖 ربات بازوی مکانیکی <span>صراط</span></h1>
+        <h1>🤖  بازوی صراط <span>صراط</span></h1>
         <p>قدرت، دقت و تکنولوژی برای پیروزی در مسابقات!</p>
     </header>
 
