--- a/index.html
+++ b/index.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>بازوی صراط - قدرت در دستان ماست!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>🤖  بازوی صراط <span>صراط</span></h1>
-        <p>قدرت، دقت و تکنولوژی برای پیروزی در مسابقات!</p>
-    </header>
+<header>
+    <div class="logo-container">
+        <a href="https://t.me/shafagtm" target="_blank">
+            <img src="logo1.jpeg" alt="شفق">
+        </a>
+        <a href="https://t.me/sarat_bot" target="_blank">
+            <img src="logo2.jpeg" alt="صراط">
+        </a>
+    </div>
+    <h1>🤖 بازوی صراط <span>قدرت در دستان ماست!</span></h1>
+    <p>ترکیبی از تکنولوژی و قدرت برای مسابقات بازوی قوی</p>
+</header>
 
-    <section class="about fade-in">
-        <h2>🔍 درباره ربات صراط</h2>
-        <p>ربات بازوی مکانیکی صراط، با بهره‌گیری از جدیدترین تکنولوژی‌ها، برای شرکت در مسابقات **بازوی قوی** طراحی شده است. این ربات ترکیبی از **قدرت، دقت و نوآوری** است که برای انجام وظایف پیچیده با کنترل بالا توسعه یافته است.</p>
-    </section>
+<section class="about fade-in">
+    <h2>🔍 درباره ربات صراط</h2>
+    <p>ربات صراط با بهره‌گیری از **هوش مصنوعی** و **ابزار های کمکی**، برای انجام وظایف پیچیده با دقت بالا طراحی شده است.</p>
+</section>
 
-    <section class="team fade-in">
-        <h2>👥 تیم توسعه شفق</h2>
-        <div id="team-container" class="team-members"></div>
-    </section>
+<section class="team fade-in">
+    <h2>👥 تیم توسعه شفق</h2>
+    <div id="team-container" class="team-members"></div>
+</section>
 
-    <footer>
-        <p>© 2025 تیم شفق | تمامی حقوق محفوظ است.</p>
-    </footer>
+<footer>
+    <p>© 2025 تیم شفق | تمامی حقوق محفوظ است.</p>
+</footer>
 
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
