--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="https://t.me/shafagtm" target="_blank">
             <img src="logo1.jpeg" alt="شفق">
         </a>
-        <a href="https://t.me/sarat_bot" target="_blank">
+        <a href="https://t.me/abj0o" target="_blank">
             <img src="logo2.jpeg" alt="صراط">
         </a>
     </div>
