--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بازوی صراط - قدرت در دستان ماست!</title>
+    <title>بازوی صراط - قدرت در ارائه خدمت</title>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,11 +13,11 @@
         <a href="https://t.me/shafagtm" target="_blank">
             <img src="logo1.jpeg" alt="شفق">
         </a>
-        <a href="https://t.me/abj0o" target="_blank">
+        <a href="https://bale.ia/shafag_tm" target="_blank">
             <img src="logo2.jpeg" alt="صراط">
         </a>
     </div>
-    <h1>🤖 بازوی صراط <span>قدرت در دستان ماست!</span></h1>
+    <h1> بازوی صراط <span>قدرت در ارائه خدمت</span></h1>
     <p>ترکیبی از تکنولوژی و قدرت برای مسابقات بازوی قوی</p>
 </header>
 
@@ -27,7 +27,7 @@
 </section>
 
 <section class="team fade-in">
-    <h2>👥 تیم توسعه شفق</h2>
+    <h2> تیم توسعه شفق</h2>
     <div id="team-container" class="team-members"></div>
 </section>
 
