--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="https://t.me/shafagtm" target="_blank">
             <img src="logo1.jpeg" alt="شفق">
         </a>
-        <a href="https://bale.ia/shafag_tm" target="_blank">
+        <a href="https://ble.ir/seratbot" target="_blank">
             <img src="logo2.jpeg" alt="صراط">
         </a>
     </div>
@@ -23,7 +23,7 @@
 
 <section class="about fade-in">
     <h2>🔍 درباره ربات صراط</h2>
-    <p>ربات صراط با بهره‌گیری از **هوش مصنوعی** و **ابزار های کمکی**، برای انجام وظایف پیچیده با دقت بالا طراحی شده است.</p>
+    <p>ربات صراط با بهره‌گیری از هوش مصنوعی و ابزار های کمکی، برای انجام وظایف پیچیده با دقت بالا طراحی شده است.</p>
 </section>
 
 <section class="team fade-in">
