--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بازوی صراط - قدرت در ارائه خدمت</title>
+    <title>بازوی صِراط - قدرت در ارائه خدمت</title>
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,20 +14,20 @@
             <img src="logo1.jpeg" alt="شفق">
         </a>
         <a href="https://ble.ir/seratbot" target="_blank">
-            <img src="logo2.jpeg" alt="صراط">
+            <img src="logo2.jpeg" alt="صِراط">
         </a>
     </div>
-    <h1> بازوی صراط <span>قدرت در ارائه خدمت</span></h1>
-    <p>ترکیبی از تکنولوژی و قدرت برای مسابقات بازوی قوی</p>
+    <h1> بازوی صِراط <span>قدرت در ارائه خدمت</span></h1>
+    <p>ترکیبی از تکنولوژی و هوش مصنوعی برای خدمت رسانی</p>
 </header>
 
 <section class="about fade-in">
-    <h2>🔍 درباره ربات صراط</h2>
+    <h2>🔍 درباره ربات صِراط</h2>
     <p>ربات صراط با بهره‌گیری از هوش مصنوعی و ابزار های کمکی، برای انجام وظایف پیچیده با دقت بالا طراحی شده است.</p>
 </section>
 
 <section class="team fade-in">
-    <h2> تیم توسعه شفق</h2>
+    <h2> تیم توسعه شَفَق</h2>
     <div id="team-container" class="team-members"></div>
 </section>
 
